# quantinuum-gug

./: Cargo.toml
src/: gug.rs  lib.rs  macros.rs  rewrite.rs
src/component/: debug.rs  mod.rs  wire_type.rs
src/component/operation/: circuit.rs  mod.rs
