[package]
name = "quantinuum-gug"
version = "0.1.0"
edition = "2021"
description = "The Gug Unified Graph library used at the core of the tket2 quantum compiler and other Quantinuum projects."

[lib]
bench = false
name = "gug"

[dependencies]
cgmath = "0.18.0"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
num-rational = "0.4.1"
portgraph = { git = "http://github.com/zrho/portgraph"}
serde = {version = "1.0.152", features = ["derive"]}
